--- a/index.html
+++ b/index.html
@@ -43,11 +43,18 @@ body {
   margin: 20px auto 0;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  margin-bottom: 10px;
+}
+
 button {
   background: #fff;
   color: #000;
   border: none;
-  padding: 10px 22px;
+  padding: 8px 16px;
   border-radius: 20px;
   font-size: 14px;
   cursor: pointer;
@@ -55,11 +62,6 @@ button {
 
 .seekbar {
   width: 100%;
-  margin-top: 14px;
-}
-
-.seekbar:disabled {
-  opacity: 0.4;
 }
 
 .time {
@@ -75,8 +77,8 @@ button {
   position: fixed;
   right: 6px;
   bottom: 6px;
-  width: 160px;
-  height: 90px;
+  width: 16px;
+  height: 9px;
   opacity: 0.05;
   pointer-events: none;
 }
@@ -87,11 +89,15 @@ button {
 
 <div class="container">
   <div class="cd" id="cd"></div>
-  <div class="title">Q</div>
-  <div class="artist">REBEL</div>
+  <div class="title"></div>
+  <div class="artist"></div>
 
   <div class="controls">
-    <button id="playBtn" onclick="togglePlay()">▶</button>
+    <div class="buttons">
+      <button onclick="prevTrack()">⏮</button>
+      <button id="playBtn" onclick="togglePlay()">▶</button>
+      <button onclick="nextTrack()">⏭</button>
+    </div>
 
     <input
       type="range"
@@ -100,7 +106,6 @@ button {
       value="0"
       class="seekbar"
       id="seekbar"
-      disabled
     >
 
     <div class="time">
@@ -117,22 +122,30 @@ button {
 let ytPlayer;
 let duration = 0;
 let seeking = false;
-let ready = false;
 let isPlaying = false;
-let rotationStartedAt = null;
+
+let rotationTimer = null;
+let currentTrack = 0;
+
+/* アルバム */
+const album = [
+  { id: "HCoTcCMLRsM", title: "Q", artist: "REBEL" },
+  { id: "p8iNb7sTNiY", title: "ロストワンの号哭", artist: "REBEL" },
+  { id: "uC44M7_srjg", title: "DOGLAND", artist: "REBEL" }
+];
 
 const cd = document.getElementById("cd");
 const seekbar = document.getElementById("seekbar");
 const playBtn = document.getElementById("playBtn");
 
+/* YouTube */
 function onYouTubeIframeAPIReady() {
-  ytPlayer = new YT.Player('player', {
-    videoId: 'HCoTcCMLRsM',
+  ytPlayer = new YT.Player("player", {
+    videoId: album[0].id,
     playerVars: {
       playsinline: 1,
       controls: 0,
-      rel: 0,
-      iv_load_policy: 3
+      rel: 0
     },
     events: {
       onReady,
@@ -143,96 +156,106 @@ function onYouTubeIframeAPIReady() {
 
 function onReady() {
   ytPlayer.setVolume(0);
-  duration = ytPlayer.getDuration();
-  document.getElementById("duration").textContent = format(duration);
+  updateTrackInfo();
   updateLoop();
-}
-
-function togglePlay() {
-  if (!ready) {
-    ytPlayer.playVideo();
-    return;
-  }
-
-  if (isPlaying) {
-    ytPlayer.pauseVideo();
-  } else {
-    ytPlayer.playVideo();
-  }
 }
 
 function onStateChange(e) {
   if (e.data === YT.PlayerState.PLAYING) {
     isPlaying = true;
     playBtn.textContent = "⏸";
-
-    if (!ready) {
-      cd.style.animationPlayState = "running";
-      rotationStartedAt = performance.now();
-      monitorRotation();
-    } else {
-      cd.style.animationPlayState = "running";
-    }
+    startRotation();
   }
 
   if (e.data === YT.PlayerState.PAUSED) {
     isPlaying = false;
     playBtn.textContent = "▶";
-    cd.style.animationPlayState = "paused";
+    stopRotation();
+  }
+
+  if (e.data === YT.PlayerState.ENDED) {
+    nextTrack();
   }
 }
 
-/* 回転が0.3秒以上進んだら本編扱い */
-function monitorRotation() {
-  if (!rotationStartedAt) return;
-
-  const elapsed = (performance.now() - rotationStartedAt) / 1000;
-
-  if (elapsed >= 0.3) {
-    ready = true;
-    seekbar.disabled = false;
-
-    let vol = 0;
-    const fade = setInterval(() => {
-      vol += 5;
-      ytPlayer.setVolume(vol);
-      if (vol >= 100) clearInterval(fade);
-    }, 100);
-
-    return;
-  }
-
-  requestAnimationFrame(monitorRotation);
+/* 再生制御 */
+function togglePlay() {
+  if (isPlaying) ytPlayer.pauseVideo();
+  else ytPlayer.playVideo();
 }
 
-/* シーク操作 */
+/* 回転 */
+function startRotation() {
+  if (cd.style.animationPlayState === "running") return;
+  cd.style.animationPlayState = "running";
+
+  clearTimeout(rotationTimer);
+  rotationTimer = setTimeout(() => {
+    ytPlayer.setVolume(100);
+  }, 300);
+}
+
+function stopRotation() {
+  cd.style.animationPlayState = "paused";
+  clearTimeout(rotationTimer);
+  ytPlayer.setVolume(0);
+}
+
+/* シーク */
 seekbar.addEventListener("input", () => {
-  if (!ready) return;
   seeking = true;
-  ytPlayer.pauseVideo();
+  const t = (seekbar.value / 100) * duration;
+  document.getElementById("current").textContent = format(t);
 });
 
 seekbar.addEventListener("change", () => {
-  if (!ready) return;
-  const target = (seekbar.value / 100) * duration;
-  ytPlayer.seekTo(target, true);
-  ytPlayer.playVideo();
+  const t = (seekbar.value / 100) * duration;
+  ytPlayer.seekTo(t, true);
   seeking = false;
 });
 
 /* 時間更新 */
 function updateLoop() {
   if (ytPlayer && ytPlayer.getCurrentTime) {
-    const current = ytPlayer.getCurrentTime();
-    document.getElementById("current").textContent = format(current);
+    duration = ytPlayer.getDuration() || duration;
+    const cur = ytPlayer.getCurrentTime();
 
-    if (ready && !seeking && duration) {
-      seekbar.value = (current / duration) * 100;
+    if (!seeking && duration) {
+      seekbar.value = (cur / duration) * 100;
     }
+
+    document.getElementById("current").textContent = format(cur);
+    document.getElementById("duration").textContent = format(duration);
   }
   requestAnimationFrame(updateLoop);
 }
 
+/* 曲切替 */
+function nextTrack() {
+  currentTrack = (currentTrack + 1) % album.length;
+  loadTrack();
+}
+
+function prevTrack() {
+  currentTrack =
+    (currentTrack - 1 + album.length) % album.length;
+  loadTrack();
+}
+
+function loadTrack() {
+  stopRotation();
+  ytPlayer.loadVideoById(album[currentTrack].id);
+  updateTrackInfo();
+  playBtn.textContent = "▶";
+}
+
+/* UI更新 */
+function updateTrackInfo() {
+  document.querySelector(".title").textContent = album[currentTrack].title;
+  document.querySelector(".artist").textContent = album[currentTrack].artist;
+}
+
+/* util */
 function format(sec) {
   const m = Math.floor(sec / 60);
   const s = Math.floor(sec % 60).toString().padStart(2, "0");
