--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ body {
 /* ===== ヘッダー ===== */
 .header {
   position: fixed;
-  top: 10px;
-  right: 15px;
-  z-index: 30;
+  top: 12px;
+  right: 16px;
+  z-index: 40;
 }
 
 .menu-btn {
@@ -36,12 +36,10 @@ body {
   background: #181818;
   padding: 20px;
   transition: right 0.35s ease;
-  z-index: 25;
+  z-index: 35;
 }
 
-.playlist.open {
-  right: 0;
-}
+.playlist.open { right: 0; }
 
 .track {
   padding: 10px;
@@ -49,9 +47,7 @@ body {
   cursor: pointer;
 }
 
-.track.active {
-  background: #333;
-}
+.track.active { background: #333; }
 
 .track span {
   display: block;
@@ -61,7 +57,7 @@ body {
 
 /* ===== メイン ===== */
 .container {
-  padding: 40px 15px 20px;
+  padding: 44px 15px 20px;
   text-align: center;
 }
 
@@ -72,11 +68,15 @@ body {
   margin: 20px auto;
 }
 
-/* ===== 動画 ===== */
+/* ===== 動画（CD中心基準） ===== */
 .video {
   position: absolute;
-  inset: 20px;
-  opacity: 0.18;
+  top: 50%;
+  left: 50%;
+  width: 220px;          /* ← CD内に収まるサイズ */
+  height: 124px;         /* 16:9維持 */
+  transform: translate(-50%, -50%);
+  opacity: 0.22;
   pointer-events: none;
   z-index: 1;
 }
@@ -84,7 +84,7 @@ body {
 .video iframe {
   width: 100%;
   height: 100%;
-  object-fit: contain; /* ← 見切れ防止 */
+  object-fit: contain;
 }
 
 /* ===== CD ===== */
@@ -100,29 +100,24 @@ body {
   transition: all 0.45s ease;
 }
 
-/* ミニCD（左上） */
+/* ミニCD（さらに上へ） */
 .cd.mini {
-  width: 64px;        /* ← さらに小さく */
-  height: 64px;
-  top: -24px;         /* ← 左上に寄せる */
-  left: -24px;
+  width: 58px;
+  height: 58px;
+  top: -38px;     /* ← さらに上 */
+  left: -22px;
 }
 
 @keyframes spin {
   from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  to   { transform: rotate(360deg); }
 }
 
-.title {
-  font-size: 18px;
-  margin-top: 10px;
-}
+/* ===== 情報 ===== */
+.title { font-size: 18px; margin-top: 10px; }
+.artist { font-size: 14px; color: #aaa; }
 
-.artist {
-  font-size: 14px;
-  color: #aaa;
-}
-
+/* ===== コントロール ===== */
 .controls {
   max-width: 320px;
   margin: 15px auto 0;
@@ -222,13 +217,14 @@ function onStateChange(e) {
   if (e.data === YT.PlayerState.ENDED) next();
 }
 
-/* 再生 */
 function toggle() { playing ? pause() : play(); }
+
 function play() {
   player.playVideo();
   playing = true;
   playBtn.textContent = "⏸";
 }
+
 function pause() {
   player.pauseVideo();
   stopRotation();
@@ -244,6 +240,7 @@ function startRotation() {
   clearTimeout(rotationTimer);
   rotationTimer = setTimeout(() => player.setVolume(100), 300);
 }
+
 function stopRotation() {
   cd.style.animationPlayState = "paused";
   clearTimeout(rotationTimer);
@@ -273,7 +270,7 @@ function loop() {
   requestAnimationFrame(loop);
 }
 
-/* 曲切替 */
+/* 曲操作 */
 function loadTrack(i) {
   index = i;
   stopRotation();
